--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <input id="input" placeholder="Ask a question about my experience..." />
 
 <script>
-const API_KEY = "YOUR_OPENAI_API_KEY"; 
-const ASSISTANT_ID = "YOUR_ASSISTANT_ID";
+const API_KEY = "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"; 
+const ASSISTANT_ID = "asst_6k54B1oobbVbe2p130ncb2kC";
 
 let threadId = null;
 
