--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AJ Resume Assistant</title>
+  <title>Talk to Achint's resume</title>
   <style>
     body { font-family: Arial; margin: 40px; max-width: 800px; }
     #chat { border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: auto; }
