--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1>AJ's AI Résumé Assistant</h1>
+<h1>Talk to Achint's resume</h1>
 
 <h3>Résumé</h3>
 <p>
@@ -27,7 +27,7 @@
 <input id="input" placeholder="Ask a question about my experience..." />
 
 <script>
-const API_KEY = "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"; 
+const API_KEY = "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"; 
 const ASSISTANT_ID = "asst_6k54B1oobbVbe2p130ncb2kC";
 
 let threadId = null;
