--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Talk to Achint's resume</title>
+  <title>Talk 2 Achint's resume</title>
   <style>
     body { font-family: Arial; margin: 40px; max-width: 800px; }
     #chat { border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: auto; }
@@ -27,7 +27,7 @@
 <input id="input" placeholder="Ask a question about my experience..." />
 
 <script>
-const API_KEY = "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"; 
+const API_KEY = "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"; 
 const ASSISTANT_ID = "asst_6k54B1oobbVbe2p130ncb2kC";
 
 let threadId = null;
